fix: map deploy, main page content align bottom

--- a/travel-app/src/components/CountriesList/CountriesList.module.css
+++ b/travel-app/src/components/CountriesList/CountriesList.module.css
@@ -1,5 +1,4 @@
 .country-list-wrapper {
-  height: 100%;
   width: 100%;
   display: flex;
   flex-wrap: wrap;
